--- a/config.yaml
+++ b/config.yaml
@@ -65,4 +65,9 @@ monitors:
     url: 'https://cpic.10244201.xyz/'
     method: GET
     expectStatus: 200
-    
+            
+  - id: odpub.nonoidea.com
+    name: odpub.nonoidea => heroku => od-xyze3m3
+    url: 'https://odpub.nonoidea.com/'
+    method: GET
+    expectStatus: 200
